@@ -23,12 +23,15 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.UnknownHostException;
+import java.security.cert.X509Certificate;
+
 import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLSession;
 
 import org.apache.hadoop.conf.Configuration;
+
+
 
 /** An implementation of a protocol for accessing filesystems over HTTPS.
  * The following implementation provides a limited, read-only interface
@@ -38,10 +41,15 @@ import org.apache.hadoop.conf.Configuration;
  */
 public class HsftpFileSystem extends HftpFileSystem {
 
+  private static final long MM_SECONDS_PER_DAY = 1000 * 60 * 60 * 24;
+  private volatile int ExpWarnDays = 0;  
+  
+  
   @Override
   public void initialize(URI name, Configuration conf) throws IOException {
     super.initialize(name, conf);
     setupSsl(conf);
+    ExpWarnDays = conf.getInt("ssl.expiration.warn.days", 30);
   }
 
   /** Set up SSL resources */
@@ -64,7 +72,7 @@ public class HsftpFileSystem extends HftpFileSystem {
     System.setProperty("javax.net.ssl.keyStoreType", sslConf.get(
         "ssl.client.keystore.type", "jks"));
   }
-
+  
   @Override
   protected HttpURLConnection openConnection(String path, String query)
       throws IOException {
@@ -74,6 +82,31 @@ public class HsftpFileSystem extends HftpFileSystem {
       HttpsURLConnection conn = (HttpsURLConnection)url.openConnection();
       // bypass hostname verification
       conn.setHostnameVerifier(new DummyHostnameVerifier());
+      conn.setRequestMethod("GET");
+      conn.connect();
+     
+   // check cert expiration date
+      final int warnDays = ExpWarnDays;
+      if (warnDays > 0) { // make sure only check once
+        ExpWarnDays = 0;
+        long expTimeThreshold = warnDays * MM_SECONDS_PER_DAY
+            + System.currentTimeMillis();
+        X509Certificate[] clientCerts = (X509Certificate[]) conn
+            .getLocalCertificates();
+        if (clientCerts != null) {
+          for (X509Certificate cert : clientCerts) {
+            long expTime = cert.getNotAfter().getTime();
+            if (expTime < expTimeThreshold) {
+              StringBuffer sb = new StringBuffer();
+              sb.append("\n Client certificate "
+                  + cert.getSubjectX500Principal().getName());
+              int dayOffSet = (int) ((expTime - System.currentTimeMillis())/MM_SECONDS_PER_DAY);
+              sb.append(" have " + dayOffSet + " days to expire");
+              LOG.warn(sb.toString());
+            }
+          }
+        }        
+      }
       return (HttpURLConnection)conn;
     } catch (URISyntaxException e) {
       throw (IOException)new IOException().initCause(e);
