@@ -292,6 +292,9 @@ Trunk (unreleased changes)
 
     HADOOP-5217. Split AllTestDriver for core, hdfs and mapred. (sharad)
 
+    HADOOP-5364. Add certificate expiration warning to HsftpFileSystem and HDFS
+    proxy. (Zhiyong Zhang via cdouglas)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
